Fix formatted text alignment only works for paragraph

--- a/app/assets/stylesheets/modules/formatted_text.scss
+++ b/app/assets/stylesheets/modules/formatted_text.scss
@@ -1,11 +1,11 @@
-.formatted-text p.ql-align-right {
+.formatted-text .ql-align-right {
   text-align: right;
 }
 
-.formatted-text p.ql-align-center {
+.formatted-text .ql-align-center {
   text-align: center;
 }
 
-.formatted-text p.ql-align-justify {
+.formatted-text .ql-align-justify {
   text-align: justify;
 }
